# AdventOfCode

./: .gitignore  README.md
.github/workflows/: ci-2023-rust.yml  ci.yml
2022/: README.md
2022/Python/Day_1/: part_1.py  part_2.py  prompt.md
2022/Python/Day_2/: part1.py  part2.py  prompt.md
2023/: README.md
2023/Rust/: Cargo.toml
2023/Rust/src/: lib.rs  main.rs  problem.rs
2023/Rust/src/days/: day1.rs  day2.rs  mod.rs
